# happy-million-seconds

./: .gitignore  Cargo.toml  README.md  happy-million-seconds.html  index.html
.github/workflows/: deploy-to-gh-pages.yml
css/: styles.css
js/: app.js  happy_million_seconds.js  happy_million_seconds_bg.wasm  wasm_loader.js
src/: lib.rs  main.rs
static/: styles.css
templates/: index.html.hbs  result.html.hbs
wasm/: happy_million_seconds.d.ts  happy_million_seconds_bg.wasm.d.ts  package.json
