[package]
name = "happy-million-seconds"
version = "0.1.0"
edition = "2021"
authors = ["Chris Boette <chrisbodhi@gmail.com>"]
description = "A static website to celebrate your million, billion, and trillion second birthdays"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"] }
chrono = { version = "0.4.26", features = ["wasmbind"] }
js-sys = "0.3.61"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono-tz = "0.8.2"
wasm-bindgen-futures = "0.4.34"
serde-wasm-bindgen = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = 3
lto = true
